// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add ellipsis for files 1`] = `
"| Input | Files | Size | Percent |
| --- | --- | --- | --- |
| \`<bundle>.js\` |  | 3.41KB | 100% |
| \`↪ lodash\` | debounce.js (998B), toNumber.js (399B), _getRawTag.js (245B), _baseGetTag.js (201B), _root.js (139B), isSymbol.js (130B), _trimmedEndIndex.js (115B), _baseTrim.js (112B), isObject.js (107B), _objectToString.js (104B), and 4 other files (320B) | 2.8KB | 82.3% |
| \`↪ <import>\` |  | 16B | 0.5% |"
`;

exports[`alias in tsconfig 1`] = `
"| Input | Files | Size | Percent |
| --- | --- | --- | --- |
| \`<bundle>.js\` | &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;  | 29B | 100% |
| \`↪ pkg-mylib\` | main.js | 9B | 31.0% |"
`;

exports[`analyze 1`] = `
"| Input | Files | Size | Percent |
| --- | --- | --- | --- |
| \`<bundle>.js\` |  | 7.79KB | 100% |
| \`↪ react\` | cjs/react.production.min.js (5.82KB), index.js (46B) | 5.87KB | 75.3% |
| \`↪ object-assign\` | index.js | 956B | 12.0% |
| \`↪ <import>\` |  | 14B | 0.2% |"
`;

exports[`measure "
    import 'react-inline-center'
  " 1`] = `
[
  {
    "error": undefined,
    "importInfo": {
      "end": 28,
      "from": "react-inline-center",
      "start": 0,
    },
    "result": {
      "human": {
        "size": "22B",
        "zippedSize": "42B",
      },
      "modulePkg": undefined,
      "modulePkgFile": undefined,
      "pkg": {
        "dependencies": undefined,
        "description": "Centering inline element",
        "homepage": undefined,
        "name": "react-inline-center",
        "peerDependencies": {
          "react": "*",
        },
        "version": "1.0.1",
      },
      "pkgFile": "node_modules/react-inline-center/package.json",
      "size": 22,
      "stats": undefined,
      "zippedSize": 42,
    },
  },
]
`;

exports[`measure "
    import 'sanitize.css'
    import 'sanitize.css/forms.css'
  " 1`] = `
[
  {
    "error": undefined,
    "importInfo": {
      "end": 21,
      "from": "sanitize.css",
      "start": 0,
    },
    "result": {
      "human": {
        "size": "2.13KB",
        "zippedSize": "930B",
      },
      "modulePkg": undefined,
      "modulePkgFile": undefined,
      "pkg": {
        "dependencies": undefined,
        "description": "A best-practices CSS foundation",
        "homepage": "https://github.com/csstools/sanitize.css#readme",
        "name": "sanitize.css",
        "peerDependencies": undefined,
        "version": "13.0.0",
      },
      "pkgFile": "node_modules/sanitize.css/package.json",
      "size": 2185,
      "stats": undefined,
      "zippedSize": 930,
    },
  },
  {
    "error": undefined,
    "importInfo": {
      "end": 53,
      "from": "sanitize.css/forms.css",
      "start": 22,
    },
    "result": {
      "human": {
        "size": "525B",
        "zippedSize": "353B",
      },
      "modulePkg": undefined,
      "modulePkgFile": undefined,
      "pkg": {
        "dependencies": undefined,
        "description": "A best-practices CSS foundation",
        "homepage": "https://github.com/csstools/sanitize.css#readme",
        "name": "sanitize.css",
        "peerDependencies": undefined,
        "version": "13.0.0",
      },
      "pkgFile": "node_modules/sanitize.css/package.json",
      "size": 525,
      "stats": undefined,
      "zippedSize": 353,
    },
  },
]
`;

exports[`measure "
    import * as dateFns from 'date-fns'
    " 1`] = `
[
  {
    "error": undefined,
    "importInfo": {
      "end": 35,
      "from": "date-fns",
      "namespace": {
        "name": "dateFns",
        "usingProps": [],
      },
      "start": 0,
    },
    "result": {
      "human": {
        "size": "0B",
        "zippedSize": "0B",
      },
      "modulePkg": undefined,
      "modulePkgFile": undefined,
      "pkg": {
        "dependencies": {},
        "description": "Modern JavaScript date utility library",
        "homepage": undefined,
        "name": "date-fns",
        "peerDependencies": undefined,
        "version": "2.17.0",
      },
      "pkgFile": "node_modules/date-fns/package.json",
      "size": 0,
      "stats": undefined,
      "zippedSize": 0,
    },
  },
]
`;

exports[`measure "
    import * as dateFns from 'date-fns'
    {
      let dateFns = {}
      {
        dateFns.addDays
      }
      void (function(dateFns) {
        dateFns.addDays()
      }())
    }
    " 1`] = `
[
  {
    "error": undefined,
    "importInfo": {
      "end": 35,
      "from": "date-fns",
      "namespace": {
        "name": "dateFns",
        "usingProps": [],
      },
      "start": 0,
    },
    "result": {
      "human": {
        "size": "0B",
        "zippedSize": "0B",
      },
      "modulePkg": undefined,
      "modulePkgFile": undefined,
      "pkg": {
        "dependencies": {},
        "description": "Modern JavaScript date utility library",
        "homepage": undefined,
        "name": "date-fns",
        "peerDependencies": undefined,
        "version": "2.17.0",
      },
      "pkgFile": "node_modules/date-fns/package.json",
      "size": 0,
      "stats": undefined,
      "zippedSize": 0,
    },
  },
]
`;

exports[`measure "
    import * as dateFns from 'date-fns'
    dateFns.addDays
    " 1`] = `
[
  {
    "error": undefined,
    "importInfo": {
      "end": 35,
      "from": "date-fns",
      "namespace": {
        "name": "dateFns",
        "usingProps": [
          {
            "end": 51,
            "name": "addDays",
            "start": 36,
          },
        ],
      },
      "start": 0,
    },
    "result": {
      "human": {
        "size": "869B",
        "zippedSize": "506B",
      },
      "modulePkg": undefined,
      "modulePkgFile": undefined,
      "pkg": {
        "dependencies": {},
        "description": "Modern JavaScript date utility library",
        "homepage": undefined,
        "name": "date-fns",
        "peerDependencies": undefined,
        "version": "2.17.0",
      },
      "pkgFile": "node_modules/date-fns/package.json",
      "size": 869,
      "stats": undefined,
      "zippedSize": 506,
    },
  },
]
`;

exports[`measure "
    import * as utils from './utils'
    " 1`] = `
[
  {
    "error": [Error: Skip non-npm packages],
    "importInfo": {
      "end": 32,
      "from": "./utils",
      "namespace": {
        "name": "utils",
        "usingProps": [],
      },
      "start": 0,
    },
    "result": undefined,
  },
]
`;

exports[`measure "
    import {lightFormat} from 'date-fns'
    " 1`] = `
[
  {
    "error": undefined,
    "importInfo": {
      "end": 36,
      "from": "date-fns",
      "names": {
        "lightFormat": "lightFormat",
      },
      "start": 0,
    },
    "result": {
      "human": {
        "size": "2.43KB",
        "zippedSize": "1.13KB",
      },
      "modulePkg": undefined,
      "modulePkgFile": undefined,
      "pkg": {
        "dependencies": {},
        "description": "Modern JavaScript date utility library",
        "homepage": undefined,
        "name": "date-fns",
        "peerDependencies": undefined,
        "version": "2.17.0",
      },
      "pkgFile": "node_modules/date-fns/package.json",
      "size": 2489,
      "stats": undefined,
      "zippedSize": 1162,
    },
  },
]
`;

exports[`measure "
    import {map} from 'lodash'
    " 1`] = `
[
  {
    "error": undefined,
    "importInfo": {
      "end": 26,
      "from": "lodash",
      "names": {
        "map": "map",
      },
      "start": 0,
    },
    "result": {
      "human": {
        "size": "71.78KB",
        "zippedSize": "26.02KB",
      },
      "modulePkg": undefined,
      "modulePkgFile": undefined,
      "pkg": {
        "dependencies": undefined,
        "description": "Lodash modular utilities.",
        "homepage": "https://lodash.com/",
        "name": "lodash",
        "peerDependencies": undefined,
        "version": "4.17.21",
      },
      "pkgFile": "node_modules/lodash/package.json",
      "size": 73500,
      "stats": undefined,
      "zippedSize": 26641,
    },
  },
]
`;

exports[`measure "
    import React from 'react'
  " 1`] = `
[
  {
    "error": undefined,
    "importInfo": {
      "end": 25,
      "from": "react",
      "names": {
        "default": "React",
      },
      "start": 0,
    },
    "result": {
      "human": {
        "size": "7.79KB",
        "zippedSize": "3.26KB",
      },
      "modulePkg": undefined,
      "modulePkgFile": undefined,
      "pkg": {
        "dependencies": {
          "loose-envify": "^1.1.0",
          "object-assign": "^4.1.1",
        },
        "description": "React is a JavaScript library for building user interfaces.",
        "homepage": "https://reactjs.org/",
        "name": "react",
        "peerDependencies": undefined,
        "version": "17.0.2",
      },
      "pkgFile": "node_modules/react/package.json",
      "size": 7974,
      "stats": undefined,
      "zippedSize": 3335,
    },
  },
]
`;

exports[`measure "
    import factory from '@ambarli/alias/factory'
  " 1`] = `
[
  {
    "error": undefined,
    "importInfo": {
      "end": 44,
      "from": "@ambarli/alias/factory",
      "names": {
        "default": "factory",
      },
      "start": 0,
    },
    "result": {
      "human": {
        "size": "637B",
        "zippedSize": "372B",
      },
      "modulePkg": undefined,
      "modulePkgFile": undefined,
      "pkg": {
        "dependencies": undefined,
        "description": "Get aliases",
        "homepage": undefined,
        "name": "@ambarli/alias",
        "peerDependencies": undefined,
        "version": "0.0.0",
      },
      "pkgFile": "node_modules/@ambarli/alias/package.json",
      "size": 637,
      "stats": undefined,
      "zippedSize": 372,
    },
  },
]
`;

exports[`measure "
    import map from 'lodash/map'
    " 1`] = `
[
  {
    "error": undefined,
    "importInfo": {
      "end": 28,
      "from": "lodash/map",
      "names": {
        "default": "map",
      },
      "start": 0,
    },
    "result": {
      "human": {
        "size": "21.1KB",
        "zippedSize": "8.29KB",
      },
      "modulePkg": undefined,
      "modulePkgFile": undefined,
      "pkg": {
        "dependencies": undefined,
        "description": "Lodash modular utilities.",
        "homepage": "https://lodash.com/",
        "name": "lodash",
        "peerDependencies": undefined,
        "version": "4.17.21",
      },
      "pkgFile": "node_modules/lodash/package.json",
      "size": 21611,
      "stats": undefined,
      "zippedSize": 8489,
    },
  },
]
`;

exports[`measure "
    import path from 'path'
    import fs from 'fs/promise'
    import url from 'node:url'
    " 1`] = `
[
  {
    "error": [Error: Skip builtin modules],
    "importInfo": {
      "end": 23,
      "from": "path",
      "names": {
        "default": "path",
      },
      "start": 0,
    },
    "result": undefined,
  },
  {
    "error": [Error: Skip builtin modules],
    "importInfo": {
      "end": 51,
      "from": "fs/promise",
      "names": {
        "default": "fs",
      },
      "start": 24,
    },
    "result": undefined,
  },
  {
    "error": [Error: Skip builtin modules],
    "importInfo": {
      "end": 78,
      "from": "node:url",
      "names": {
        "default": "url",
      },
      "start": 52,
    },
    "result": undefined,
  },
]
`;

exports[`no package.json in exports 1`] = `
"| Input | Files | Size | Percent |
| --- | --- | --- | --- |
| \`<bundle>.js\` |  | 308B | 100% |
| \`↪ escalade\` | dist/index.mjs | 285B | 92.5% |"
`;

exports[`parse flow type 1`] = `
"| Input | Files | Size | Percent |
| --- | --- | --- | --- |
| \`<bundle>.js\` |  | 764B | 100% |
| \`↪ @react-native/assets\` | registry.js | 142B | 18.6% |
| \`↪ <import>\` |  | 13B | 1.7% |"
`;
